Procedure que terá regra de negocio para achar o estoque minimo que será utilizado no background services e hangifre qual irá disparar uma notificação.

--- a/BloodBankSystem.Infrastructure/BloodBankSystem.Infrastructure.csproj
+++ b/BloodBankSystem.Infrastructure/BloodBankSystem.Infrastructure.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Persistence\Migrations\" />
+    <Folder Include="Persistence\Migrations\Scripts\Procedure\" />
   </ItemGroup>
 
 </Project>
