--- a/BloodBankSystem.API/appsettings.json
+++ b/BloodBankSystem.API/appsettings.json
@@ -14,6 +14,6 @@
     "Host": "smtp.sendgrid.net",
     "Port": "587",
     "UserName": "apikey",
-    "Password": ".."
+    "Password": "password"
   }
 }
